# Zwift-TV

./: .gitmodules  README.md  main.py  package.json  pyproject.toml
backend/: justfile  pyproject.toml
backend/app/: __init__.py  config.py  extensions.py
backend/app/api/v1/: __init__.py  health.py  tv.py  users.py
backend/app/services/roku/: client.py
backend/app/ws/: connections.py  hub.py  tv.py
backend/app/ws/topics/: roku_power.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  page.tsx
frontend/src/components/app/: base-icon.tsx  disney-icon.tsx  index.ts  netflix-icon.tsx  zwift-icon.tsx
frontend/src/components/layout/: quick-controls.tsx
scripts/: start_novnc.sh
tools/hammerspoon/: apps.lua  init.lua  layout.lua  media.lua  state.lua
